--- a/css/navbar.css
+++ b/css/navbar.css
@@ -34,7 +34,7 @@
 
 .navbar-brand:hover {
   transform: scale(1.05);
-  color: var(--color-accent-green);
+  color: var(--color-beige);
 }
 
 .navbar-brand-icon {
@@ -66,14 +66,14 @@
   left: 50%;
   width: 0;
   height: 3px;
-  background-color: var(--color-accent-green);
+  background-color: var(--color-beige);
   transform: translateX(-50%);
   transition: width var(--transition-normal);
 }
 
 .navbar-link:hover {
-  color: var(--color-accent-green);
-  background-color: rgba(80, 180, 152, 0.1);
+  color: var(--color-beige);
+  background-color: rgba(208, 183, 135, 0.1);
 }
 
 .navbar-link:hover::before {
@@ -82,8 +82,8 @@
 
 /* Link activo */
 .navbar-link.active {
-  color: var(--color-accent-green);
-  background-color: rgba(80, 180, 152, 0.15);
+  color: var(--color-beige);
+  background-color: rgba(208, 183, 135, 0.15);
   font-weight: 600;
 }
 
@@ -187,7 +187,7 @@
 
   .navbar-link:hover,
   .navbar-link.active {
-    background-color: rgba(80, 180, 152, 0.2);
+    background-color: rgba(208, 183, 135, 0.2);
     transform: translateX(5px);
   }
 }
